# osinfo-db-tools

./: .gitignore  .gitlab-ci.yml  .gitpublish  AUTHORS.in  Makefile.am  NEWS  README  autobuild.sh  autogen.sh  cfg.mk  configure.ac  meson.build  mingw-osinfo-db-tools.spec.in  osinfo-db-tools.spec.in  prepare-release.sh
build-aux/: GNUmakefile  cfg.mk  dist.sh  maint.mk  syntax-check.mk
ci/: ci-debian-sid.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-rawhide-cross-mingw32.Dockerfile  ci-fedora-rawhide-cross-mingw64.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-ubuntu-2004.Dockerfile  gitlab.yml  manifest.yml  refresh
ci/buildenv/: almalinux-8.sh  almalinux-9.sh  alpine-320.sh  alpine-323.sh  alpine-edge.sh  centos-stream-10.sh  centos-stream-8.sh  centos-stream-9.sh  debian-10.sh  debian-12.sh  debian-13.sh  debian-sid.sh  fedora-36.sh  fedora-41.sh  fedora-42.sh  fedora-43.sh  fedora-rawhide-cross-mingw32.sh  fedora-rawhide-cross-mingw64.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-leap-153.sh  opensuse-leap-16.sh  opensuse-tumbleweed.sh  ubuntu-2204.sh
ci/containers/: almalinux-8.Dockerfile  almalinux-9.Dockerfile  alpine-318.Dockerfile  alpine-319.Dockerfile  alpine-320.Dockerfile  alpine-321.Dockerfile  alpine-322.Dockerfile  alpine-323.Dockerfile  alpine-edge.Dockerfile  centos-8.Dockerfile  centos-stream-10.Dockerfile  centos-stream-8.Dockerfile  centos-stream-9.Dockerfile  ci-centos-7.Dockerfile  ci-centos-8.Dockerfile  ci-centos-stream.Dockerfile  ci-debian-10.Dockerfile  ci-debian-9.Dockerfile  ci-debian-sid.Dockerfile  ci-fedora-31.Dockerfile  ci-fedora-32.Dockerfile  ci-fedora-33.Dockerfile  ci-fedora-rawhide-cross-mingw32.Dockerfile  ci-fedora-rawhide-cross-mingw64.Dockerfile  ci-fedora-rawhide.Dockerfile  ci-opensuse-151.Dockerfile  ci-ubuntu-1804.Dockerfile  ci-ubuntu-2004.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian-13.Dockerfile  debian-sid.Dockerfile  fedora-33.Dockerfile  fedora-34.Dockerfile  fedora-35.Dockerfile  fedora-36.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-41.Dockerfile  (+15 more)
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
ci/lcitool/projects/: osinfo-db-tools.yml
docs/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  af.po  am.po  anp.po  ar.po  as.po  ast.po  bal.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  brx.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+64 more)
scripts/: require-dco.sh
tests/: Makefile.am  meson.build  test_osinfo_db_export_import.py  test_osinfo_db_path.py  test_osinfo_db_validate.py  util.py
tests/data/: license
tests/data/negative/os/fedoraproject.org/: fedora-rawhide.xml
tests/data/negative/schema/: osinfo.rng
tests/data/positive/datamap/x.org/: x11-keyboard.xml
tests/data/positive/device/ibm.com/: ps2-keyboard.xml
tests/data/positive/install-script/fedoraproject.org/: silverblue-kickstart-desktop.xml
tests/data/positive/os/fedoraproject.org/: fedora-rawhide.xml
tests/data/positive/platform/linux-kvm.org/: qemu-kvm-1.2.0.xml
tools/: Makefile.am  meson.build  osinfo-db-export.c  osinfo-db-import.c  osinfo-db-path.c  osinfo-db-util.c  osinfo-db-util.h  osinfo-db-validate.c
